--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,12 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
+[tool.poetry.group.test]
+
 [tool.poetry.dependencies]
 python = "^3.10"
+[tool.poetry.group.test.dependencies]
+pytest = "^8.3.2"
 
 
 [build-system]
